--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -3,23 +3,22 @@ languageName = "English"
 languageDirection = "ltr"
 weight = 1
 
-title = "Egor Howell"
-# copyright = "Egor Howell"
+title = "Mohamed Abouzid"
+copyright = "© 2025 Mohamed Abouzid"
 
 [params]
   dateFormat = "2 January 2006"
 
-  description = "Personal website of Egor Howell"
+  description = "Personal website of Mohamed Abouzid"
 
 [params.author]
-  name = "Egor Howell"
-  image = "img/pic2.png"
-  headline = "Data Scientist, Machine Learning Engineer & Content Creator"
-  bio = "Data Scientist, Machine Learning Engineer & Content Creator."
+  name = "Mohamed Abouzid"
+  image = "img/avatar.png"
+  headline = "Bioinformatician, Data Scientist & Content Creator"
+  bio = "Bioinformatician, Data Scientist & Content Creator."
   links = [
-    { youtube = "https://youtube.com/@egorhowell" },
-    { medium = "https://medium.com/@egorhowell" },
-    { instagram = "https://instagram.com/egorhowell" },
-    { github = "https://github.com/egorhowell" },
-    { linkedin = "https://www.linkedin.com/in/egorhowell/" },
+    { youtube = "https://youtube.com/" },
+    { instagram = "https://www.instagram.com/_mohamed.at.abouzid/" },
+    { github = "https://github.com/MohamedAbouzid1" },
+    { linkedin = "https://www.linkedin.com/in/mohamed-abouzid/" },
   ]
