--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,6 +11,11 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
+  name = "About"
+  pageRef = "about"
+  weight = 30
+
+[[main]]
   name = "Blog"
   pageRef = "posts"
   weight = 10
@@ -20,10 +25,6 @@
   pageRef = "categories"
   weight = 20
 
-[[main]]
-  name = "Tags"
-  pageRef = "tags"
-  weight = 30
 
 [[main]]
   identifier = "search"
