--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,5 +1,5 @@
 # -- Site Configuration --
-# Refer to the theme docs for more details about each of these parameters.
+# Refer to the theme docs for more details _index.md.md each of these parameters.
 # https://jpanther.github.io/congo/docs/getting-started/
 
 theme = "congo"
