--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -21,8 +21,8 @@
   weight = 20
 
 [[main]]
-  name = "Categories"
-  pageRef = "categories"
+  name = "YouTube"
+  pageRef = "youtube"
   weight = 30
 
 
