--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -2,15 +2,16 @@
 # These options control how the theme functions and allow you to
 # customise the display of your website.
 #
-# Refer to the theme docs for more details _index.md.md each of these parameters.
+# Refer to the theme docs for more details index.md.md each of these parameters.
 # https://jpanther.github.io/congo/docs/configuration/#theme-parameters
 
 colorScheme = "ocean"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = false
 defaultThemeColor = "#007fff"
+mainPosts = ["posts"]
 
-enableSearch = false
+enableSearch = true
 enableCodeCopy = false
 enableImageLazyLoading = true
 
@@ -35,8 +36,8 @@ fingerprintAlgorithm = "sha256"
   recentLimit = 5
 
 [article]
-  showDate = false
-  showDateUpdated = false
+  showDate = true
+  showDateUpdated = true
   showAuthor = false
   showBreadcrumbs = false
   showDraftLabel = false
@@ -44,21 +45,21 @@ fingerprintAlgorithm = "sha256"
   # editURL = "https://github.com/egorhowell/testing_website/"
   editAppendPath = true
   showHeadingAnchors = false
-  showPagination = false
+  showPagination = true
   invertPagination = false
-  showReadingTime = false
-  showTableOfContents = false
-  showTaxonomies = false
+  showReadingTime = true
+  showTableOfContents = true
+  showTaxonomies = true
   showWordCount = false
-  showComments = false
+  showComments = true
   #sharingLinks = ["facebook", "twitter", "mastodon", "pinterest", "reddit", "linkedin", "email"]
 
 [list]
   showBreadcrumbs = false
   showSummary = false
-  showTableOfContents = false
-  showTaxonomies = false
-  groupByYear = false
+  showTableOfContents = true
+  showTaxonomies = true
+  groupByYear = true
   paginationWidth = 1
 
 [sitemap]
@@ -72,7 +73,7 @@ fingerprintAlgorithm = "sha256"
   # domain = "llama.yoursite.com"
 
 [plausibleAnalytics]
-  # domain = "blog.yoursite.com"
+  # domain = "posts.yoursite.com"
   # event = ""
   # script = ""
 
