fixed arabic blog

--- a/config/_default/languages.ar.toml
+++ b/config/_default/languages.ar.toml
@@ -1,6 +1,6 @@
 languageCode = "ar"
 languageName = "Arabic"
-languageDirection = "ltr"
+languageDirection = "rtl"
 weight = 1
 
 title = "محمد أبوزيد"
