--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -20,7 +20,7 @@ fingerprintAlgorithm = "sha256"
 IsMultilingual = true
 
 [header]
-  layout = "hybrid" # valid options: basic, hamburger, hybrid, custom
+  layout = "basic" # valid options: basic, hamburger, hybrid, custom
   # logo = "img/logo.jpg"
   # logoDark = "img/dark-logo.jpg"
   showTitle = true
